[gd_scene load_steps=4 format=3 uid="uid://b8i5dntuahi7w"]

[ext_resource type="Script" path="res://Scripts/UI/ajustes_menu.gd" id="1_asojt"]
[ext_resource type="Texture2D" uid="uid://bllbdhrtwj6u1" path="res://Assets/level1.png" id="2_v8kkf"]
[ext_resource type="FontFile" uid="uid://b630sr0wv8xrk" path="res://Assets/Fonts/DungeonChunk.ttf" id="3_4ntwo"]

[node name="AjustesMenu" type="Control"]
z_index = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_asojt")

[node name="Panel" type="Panel" parent="."]
texture_filter = 1
layout_mode = 0
offset_right = 320.0
offset_bottom = 160.0

[node name="Sprite2D" type="Sprite2D" parent="Panel"]
position = Vector2(162, 80)
scale = Vector2(1.18571, 1.11111)
texture = ExtResource("2_v8kkf")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 48.0
offset_top = 8.0
offset_right = 272.0
offset_bottom = 152.0

[node name="MainMenuButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_4ntwo")
text = "< VOLVER"

[node name="CheckButton" type="CheckButton" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_4ntwo")
button_pressed = true
text = "EFECTOS "

[node name="FullscreenButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_4ntwo")
text = "PANTALLA COMPLETA"

[connection signal="pressed" from="VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="toggled" from="VBoxContainer/CheckButton" to="." method="_on_check_button_toggled"]
[connection signal="pressed" from="VBoxContainer/FullscreenButton" to="." method="_on_fullscreen_button_pressed"]
